[tox:tox]
requires = 
    tox>=4
env_list = py{311}, mypy, flake8

[options]
packages = find:
python_requires = >=3.11
install_requires = 
    requests>=2.3
    flake8>=6
    mypy>=1
    tox>=4
    selenium>=4.9
    appium-python-client>=2.9
    webdriver-manager>=3.8
    faker>=18
    psutil>=5
    toml>=0.10
    types-toml>=0.10
    pymongo>=4
    celery>=5
    loguru>=0.6
    isort>=5.12
    black>=23.3
    pre-commit>=3.2
    types-pyyaml>=6
    cryptography>=40.0.2
    openai>=0.27.6
zip_safe = False


[options.extras_require]
testing = 
    pytest>=7
    pytest-cov>=4
    uplink>=0.9
    pytest-xdist>=3.2


[options.package_data]
uaf = py.typed

[flake8]
max-line-length = 120
exclude = tests
ignore = F401

[isort]
known_third_party = dateutil,httpretty,pytest,selenium,setuptools,urllib3,mock,sauceclient
known_first_party = test,uaf
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120


[mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
follow_imports = skip
strict_optional = True
warn_unused_ignores = False