[options]
packages = find:
python_requires = >=3.11
install_requires = 
    requests>=2.32.3
    mypy>=1.10.0
    tox>=4.15.1
    selenium>=4.22.0
    appium-python-client>=4.0.0
    webdriver-manager>=4.0.1
    faker>=25.9.1
    ruff>=0.4.10
    psutil>=6.0.0
    pymongo>=4.7.3
    celery>=5.4.0
    loguru>=0.7.2
    pre-commit>=3.7.1
    types-pyyaml>=6.0.12.20240311
    cryptography>=42.0.8
    openai>=1.35.3
zip_safe = False


[options.extras_require]
testing = 
    pytest>=8.2.2
    pytest-cov>=5.0.0
    pytest-xdist>=3.6.1


[options.package_data]
uaf = py.typed


[mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
follow_imports = skip
strict_optional = True
warn_unused_ignores = False