[options]
packages = find:
python_requires = >=3.11
install_requires = 
    requests>=2.32.3
    mypy>=1.12.0
    tox>=4.23.0
    selenium>=4.25.0
    appium-python-client>=4.2.0
    webdriver-manager>=4.0.2
    faker>=30.6.0
    ruff>=0.6.9
    psutil>=6.0.0
    pymongo>=4.10.1
    psycopg>=3.2.3
    celery>=5.4.0
    loguru>=0.7.2
    pre-commit>=4.0.1
    types-pyyaml>=6.0.12.20240917
    cryptography>=43.0.1
    openai>=1.51.2
zip_safe = False


[options.extras_require]
testing = 
    pytest>=8.3.3
    pytest-cov>=5.0.0
    pytest-xdist>=3.6.1


[options.package_data]
uaf = py.typed


[mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
follow_imports = skip
strict_optional = True
warn_unused_ignores = False